--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,10 @@ jobs:
     
     - run: npm i
     - run: npm install -g firebase-tools
+    - run: npm install -D vitest jsdom
+    - run: npm install -D @types/testing-library__jest-dom
+    - run: npm install -D @testing-library/react
+    - run: npm install -D @testing-library/jest-dom
     - run: npm run test
     - run: npm run build
     - name: Archive Build
