--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,10 +22,6 @@ jobs:
     
     - run: npm i
     - run: npm install -g firebase-tools
-    - run: npm install -D vitest jsdom
-    - run: npm install -D @types/testing-library__jest-dom
-    - run: npm install -D @testing-library/react
-    - run: npm install -D @testing-library/jest-dom
     - run: npm run test
     - run: npm run build
     - name: Archive Build
@@ -33,3 +29,21 @@ jobs:
       with:
         name: dist
         path: dist
+        
+  deploy:
+      name: Deploy
+      needs: build
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - name: Download Build
+          uses: actions/download-artifact@v2
+          with:
+            name: dist
+            path: dist
+        - name: Deploy to Firebase
+          uses: w9jds/firebase-action@master
+          with:
+            args: deploy --only hosting
+          env:
+            FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
